[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-compatibility-test"
version = "0.0.2"
authors = [
    { name = "daz-3ux", email = "daz-3ux@proton.me" },
    { name = "yangbodong22011", email = "bodong.ybd@alibaba-inc.com" },
]
description = "A tool to detect which version of Redis your Redis-Like database is compatible with."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["redis >= 4.4.4", "pyyaml >= 6.0", "dataclasses"]

[project.scripts]
redis-compatibility-test = "redis_compatibility_test:__main__"

[project.urls]
"Homepage" = "https://github.com/tair-opensource/compatibility-test-suite-for-redis"
"Bug Tracker" = "https://github.com/tair-opensource/compatibility-test-suite-for-redis/issues"