[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-compatibility-test"
version = "0.0.7"
authors = [
    { name = "daz-3ux", email = "daz-3ux@proton.me" },
    { name = "yangbodong22011", email = "bodong.ybd@alibaba-inc.com" },
]
description = "A tool to detect which version of Redis your Redis-Like database is compatible with."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["redis >= 4.4.4", "pyyaml >= 6.0", "dataclasses"]

[project.scripts]
redis-compatibility-test = "redis_compatibility_test:main"

[tool.setuptools.package-data]
"redis_compatibility_test" = ["cts.json", "config.yaml"]

[project.urls]
"Homepage" = "https://github.com/tair-opensource/compatibility-test-suite-for-redis"
"Bug Tracker" = "https://github.com/tair-opensource/compatibility-test-suite-for-redis/issues"